--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,1 +1,3 @@
 @import '~antd/dist/antd.less';
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
